[package]
name = "castform"
version = "0.1.0"
authors = ["Zeyi Fan <fanzeyi1994@gmail.com>"]

[dependencies]
actix = "0.7"
actix_derive = "0.3"
actix-web = "*"
clap = "*"
failure = "0.1"
futures = "0.1"
hyper = "0.12"
hyper-tls = "0.3"
http = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.5.1"
tokio = "0.1"
toml = "0.4"
